Adding e2e tests. Checkpoint. They're broke yet

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,8 @@ jspm_packages/
 
 # Yarn Integrity file
 .yarn-integrity
+
+# Cypress generated files
+cypress/videos/
+cypress/screenshots/
+cypress/downloads/
